--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -40,13 +40,13 @@
 <main>
     <div class="container-xl">
         <div class="row">
-            <div class="d-flex col align-self-start min-vh-100"
+            <div class="d-flex col align-self-start min-vh-100 w-25"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
             <div class="d-flex col flex-column align-self-end min-vh-100 w-75">
 
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block top translate-middle"
-                     style="border: 1px solid darkgrey;border-radius: 2rem;">
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block top rounded-3"
+                     style="border: 1px solid darkgrey;">
                     <div class="row">
                         <div class="col">
                             <h2 class="display-3 text-center">Beteilige Dich an der
@@ -56,15 +56,16 @@
                         </br>
                         <div class="row">
                             <div class="col">
-                                <a class="btn btn-lg btn-danger btn-xxl text-white" data-bs-toggle="modal"
+                                <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 rounded-bottom"
+                                   data-bs-toggle="modal"
                                    data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
                                    onClick="call_startSurvey('de');">Starte Umfrage</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom translate-middle"
-                     style="border: 1px solid darkgrey;border-radius: 2rem;">
+                <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom rounded-3"
+                     style="border: 1px solid darkgrey;">
                     <div class="row">
                         <div class="col">
                             <h2 class="display-3 text-center">Take part in the survey about the biennial <span
@@ -72,7 +73,8 @@
                         </div>
                         </br>
                         <div class="col">
-                            <a class="btn btn-danger btn-lg btn-xxl text-white" data-bs-toggle="modal"
+                            <a class="btn btn-danger btn-lg btn-xxl text-white rounded-3 rounded-bottom"
+                               data-bs-toggle="modal"
                                data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
                                onClick="call_startSurvey('en');">Start the survey</a>
                         </div>
