--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -72,11 +72,13 @@
                                     class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
                         </div>
                         </br>
-                        <div class="col">
-                            <a class="btn btn-danger btn-lg btn-xxl text-white rounded-3 rounded-bottom"
-                               data-bs-toggle="modal"
-                               data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
-                               onClick="call_startSurvey('en');">Start the survey</a>
+                        <div class="row">
+                            <div class="col">
+                                <a class="btn btn-danger btn-lg btn-xxl text-white rounded-3 rounded-bottom"
+                                   data-bs-toggle="modal"
+                                   data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
+                                   onClick="call_startSurvey('en');">Start the survey</a>
+                            </div>
                         </div>
                     </div>
                 </div>
