--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -44,40 +44,42 @@
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
             <div class="d-flex col flex-column align-self-end min-vh-100 w-75">
-
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block top rounded-3"
-                     style="border: 1px solid darkgrey;">
-                    <div class="row">
-                        <div class="col">
-                            <h2 class="display-3 text-center">Beteilige Dich an der
-                                <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23 Umfrage!
-                            </h2>
-                        </div>
-                        </br>
+                <div class="row align-items-center">
+                    <div class="d-flex align-items-center align-self-center h-50 d-inline-block top rounded-3"
+                         style="border: 1px solid darkgrey;">
                         <div class="row">
                             <div class="col">
-                                <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 rounded-bottom"
-                                   data-bs-toggle="modal"
-                                   data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
-                                   onClick="call_startSurvey('de');">Starte Umfrage</a>
+                                <h2 class="display-3 text-center">Beteilige Dich an der
+                                    <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
+                                    Umfrage!
+                                </h2>
+                            </div>
+                            </br>
+                            <div class="row">
+                                <div class="col">
+                                    <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 rounded-bottom"
+                                       data-bs-toggle="modal"
+                                       data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
+                                       onClick="call_startSurvey('de');">Starte Umfrage</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom rounded-3"
-                     style="border: 1px solid darkgrey;">
-                    <div class="row">
-                        <div class="col">
-                            <h2 class="display-3 text-center">Take part in the survey about the biennial <span
-                                    class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
-                        </div>
-                        </br>
+                    <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom rounded-3"
+                         style="border: 1px solid darkgrey;">
                         <div class="row">
                             <div class="col">
-                                <a class="btn btn-danger btn-lg btn-xxl text-white rounded-3 rounded-bottom"
-                                   data-bs-toggle="modal"
-                                   data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
-                                   onClick="call_startSurvey('en');">Start the survey</a>
+                                <h2 class="display-3 text-center">Take part in the survey about the biennial <span
+                                        class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!</h2>
+                            </div>
+                            </br>
+                            <div class="row">
+                                <div class="col">
+                                    <a class="btn btn-danger btn-lg btn-xxl text-white rounded-3 rounded-bottom"
+                                       data-bs-toggle="modal"
+                                       data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
+                                       onClick="call_startSurvey('en');">Start the survey</a>
+                                </div>
                             </div>
                         </div>
                     </div>
