--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -40,20 +40,20 @@
 <main>
     <div class="container-xl">
         <div class="row">
-            <div class="d-flex col align-self-start min-vh-100 w-25"
+            <div class="d-flex col start min-vh-100 w-25"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
-            <div class="d-flex col flex-column align-self-end min-vh-100 w-75">
+            <div class="d-flex col flex-column end vh-100">
                 <div class="row">
-                    <div class="col align-self-center">
-                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block top rounded-3"
+                    <div class="col align-items-center">
+                        <div class="d-flex align-items-center align-self-center vh-50 d-inline-block top rounded-3"
                              style="border: 1px solid darkgrey;">
                             <div class="row">
                                 <div class="col">
-                                    <h2 class="display-3 text-center">Beteilige Dich an der
+                                    <h3 class="display-4">Beteilige Dich an der
                                         <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
                                         Umfrage!
-                                    </h2>
+                                    </h3>
                                 </div>
                                 </br>
                                 <div class="row">
@@ -66,13 +66,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom rounded-3"
+                        <div class="d-flex align-items-center align-self-center vh-50 d-inline-block bottom rounded-3"
                              style="border: 1px solid darkgrey;">
                             <div class="row">
                                 <div class="col">
-                                    <h2 class="display-3 text-center">Take part in the survey about the biennial <span
+                                    <h3 class="display-4">Take part in the survey about the biennial <span
                                             class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
-                                    </h2>
+                                    </h3>
                                 </div>
                                 </br>
                                 <div class="row">
