--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -39,14 +39,14 @@
 </header>
 <main>
     <div class="container-xl">
-        <div class="row">
+        <div class="row justify-content-evenly">
             <div class="d-flex col start min-vh-100 w-25"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
             <div class="d-flex col flex-column end vh-100">
                 <div class="row">
                     <div class="col align-items-center">
-                        <div class="d-flex align-items-center align-self-center vh-50 d-inline-block top rounded-3"
+                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block top rounded-3"
                              style="border: 1px solid darkgrey;">
                             <div class="row">
                                 <div class="col">
@@ -58,7 +58,7 @@
                                 </br>
                                 <div class="row">
                                     <div class="col">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 rounded-bottom"
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 rounded-bottom shadow"
                                            data-bs-toggle="modal"
                                            data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
                                            onClick="call_startSurvey('de');">Starte Umfrage</a>
@@ -66,7 +66,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center align-self-center vh-50 d-inline-block bottom rounded-3"
+                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom rounded-3"
                              style="border: 1px solid darkgrey;">
                             <div class="row">
                                 <div class="col">
@@ -77,7 +77,7 @@
                                 </br>
                                 <div class="row">
                                     <div class="col">
-                                        <a class="btn btn-danger btn-lg btn-xxl text-white rounded-3 rounded-bottom"
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 rounded-bottom"
                                            data-bs-toggle="modal"
                                            data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
                                            onClick="call_startSurvey('en');">Start the survey</a>
