--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -46,19 +46,19 @@
             <div class="d-flex col flex-column end vh-100">
                 <div class="row">
                     <div class="col align-items-center">
-                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block top rounded-3"
+                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block ms-auto top rounded-3"
                              style="border: 1px solid darkgrey;">
                             <div class="row">
                                 <div class="col">
-                                    <h3 class="display-4">Beteilige Dich an der
+                                    <h3 class="display-4 ms-auto">Beteilige Dich an der
                                         <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
                                         Umfrage!
                                     </h3>
                                 </div>
                                 </br>
                                 <div class="row">
-                                    <div class="col">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 rounded-bottom shadow"
+                                    <div class="col align-content-center">
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
                                            data-bs-toggle="modal"
                                            data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
                                            onClick="call_startSurvey('de');">Starte Umfrage</a>
