--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -57,7 +57,7 @@
                                 </div>
                                 </br>
                                 <div class="row">
-                                    <div class="col align-content-center">
+                                    <div class="col align-items-center">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
                                            data-bs-toggle="modal"
                                            data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
@@ -66,16 +66,16 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block bottom rounded-3"
+                        <div class="d-flex align-items-center align-self-center ms-auto h-50 d-inline-block bottom rounded-3"
                              style="border: 1px solid darkgrey;">
                             <div class="row">
                                 <div class="col">
-                                    <h3 class="display-4">Take part in the survey about the biennial <span
+                                    <h3 class="display-4 ms-auto">Take part in the survey about the biennial <span
                                             class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
                                     </h3>
                                 </div>
                                 </br>
-                                <div class="row">
+                                <div class="row align-items-center">
                                     <div class="col">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 rounded-bottom"
                                            data-bs-toggle="modal"
