--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -44,19 +44,19 @@
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
             <div class="d-flex col flex-column end vh-100">
-                <div class="row">
-                    <div class="col align-items-center">
-                        <div class="d-flex align-items-center align-self-center h-50 d-inline-block ms-auto top rounded-3"
-                             style="border: 1px solid darkgrey;">
+                <div class="row justify-content-evenly">
+
+                    <div class="d-flex col align-items-center align-self-center h-50 d-inline-block ms-auto top rounded-3"
+                         style="border: 1px solid darkgrey;">
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="display-4 ms-auto">Beteilige Dich an der
+                                    <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
+                                    Umfrage!
+                                </h3>
+                            </div>
+                            </br>
                             <div class="row">
-                                <div class="col">
-                                    <h3 class="display-4 ms-auto">Beteilige Dich an der
-                                        <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
-                                        Umfrage!
-                                    </h3>
-                                </div>
-                                </br>
-                                <div class="row">
                                     <div class="col align-items-center">
                                         <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
                                            data-bs-toggle="modal"
@@ -66,26 +66,25 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="d-flex align-items-center align-self-center ms-auto h-50 d-inline-block bottom rounded-3"
-                             style="border: 1px solid darkgrey;">
+                    <div class="col d-flex align-items-center align-self-center ms-auto h-50 d-inline-block bottom rounded-3"
+                         style="border: 1px solid darkgrey;">
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="display-4 ms-auto">Take part in the survey about the biennial <span
+                                        class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
+                                </h3>
+                            </div>
+                            </br>
                             <div class="row">
                                 <div class="col">
-                                    <h3 class="display-4 ms-auto">Take part in the survey about the biennial <span
-                                            class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
-                                    </h3>
-                                </div>
-                                </br>
-                                <div class="row align-items-center">
-                                    <div class="col">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 rounded-bottom"
-                                           data-bs-toggle="modal"
-                                           data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
-                                           onClick="call_startSurvey('en');">Start the survey</a>
-                                    </div>
+                                    <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 rounded-bottom"
+                                       data-bs-toggle="modal"
+                                       data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
+                                       onClick="call_startSurvey('en');">Start the survey</a>
                                 </div>
                             </div>
+                            </div>
                         </div>
-                    </div>
                 </div>
             </div>
         </div>
