--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -43,42 +43,42 @@
             <div class="d-flex col start min-vh-100 w-25"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
-            <div class="d-flex col flex-column end vh-100">
-                <div class="row justify-content-evenly align-items-center">
-                    <div class="col align-self-center ">
-                        <div class="d-flex h-50 d-inline-block ms-auto top rounded-3"
-                             style="border: 1px solid darkgrey;">
-                            <div class="row">
-                                <div class="col">
-                                    <h3 class="display-4 ms-auto">Beteilige Dich an der
-                                        <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
-                                        Umfrage!
-                                    </h3>
-                                </div>
-                                </br>
-                                <div class="row align-items-center">
-                                    <div class="col align-self-center ms-auto">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
-                                           data-bs-toggle="modal"
-                                           data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
-                                           onClick="call_startSurvey('de');">Starte Umfrage</a>
-                                    </div>
+            <div class="d-flex col flex-column end min-vh-100">
+                <div class="row justify-content-evenly vh-100">
+
+                    <div class="col d-flex h-50 d-inline-block ms-auto top rounded-3"
+                         style="border: 1px solid darkgrey;">
+                        <div class="row">
+                            <div class="col">
+                                <h3 class="display-4 ms-auto">Beteilige Dich an der
+                                    <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
+                                    Umfrage!
+                                </h3>
+                            </div>
+                            </br>
+                            <div class="row align-items-center">
+                                <div class="col align-self-center ms-auto">
+                                    <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
+                                       data-bs-toggle="modal"
+                                       data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
+                                       onClick="call_startSurvey('de');">Starte Umfrage</a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col align-self-center ">
-                        <div class="d-flex ms-auto h-50 d-inline-block bottom rounded-3"
-                             style="border: 1px solid darkgrey;">
+
+
+                    <div class="d-flex col align-self-center ms-auto h-50 d-inline-block bottom rounded-3"
+                         style="border: 1px solid darkgrey;">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h3 class="display-4 ms-auto">Take part in the survey about the biennial <span
+                                        class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
+                                </h3>
+                            </div>
+                            </br>
                             <div class="row align-items-center">
-                                <div class="col">
-                                    <h3 class="display-4 ms-auto">Take part in the survey about the biennial <span
-                                            class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
-                                    </h3>
-                                </div>
-                                </br>
-                                <div class="row align-items-center">
-                                    <div class="col align-self-auto ms-auto">
+                                <div class="col align-self-auto ms-auto">
                                         <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 ms-auto rounded-bottom"
                                            data-bs-toggle="modal"
                                            data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
@@ -87,7 +87,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+
                 </div>
             </div>
         </div>
