--- a/html5/index_4k.html
+++ b/html5/index_4k.html
@@ -40,13 +40,13 @@
 <main>
     <div class="container-xl">
         <div class="row justify-content-evenly">
-            <div class="d-flex col start min-vh-100 w-25"
+            <div class="d-flex col start min-vh-100"
                  style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
             </div>
-            <div class="d-flex col flex-column end min-vh-100">
-                <div class="row justify-content-evenly vh-100">
+            <div class="d-flex col flex-column end min-vh-100 vh-100">
+                <div class="row justify-content-evenly ms-auto h-50 ">
 
-                    <div class="col d-flex h-50 d-inline-block ms-auto top rounded-3"
+                    <div class="col d-flex d-inline-block top rounded-3"
                          style="border: 1px solid darkgrey;">
                         <div class="row">
                             <div class="col">
@@ -66,9 +66,9 @@
                             </div>
                         </div>
                     </div>
-
-
-                    <div class="d-flex col align-self-center ms-auto h-50 d-inline-block bottom rounded-3"
+                </div>
+                <div class="row justify-content-evenly ms-auto h-50 ">
+                    <div class="d-flex col align-self-centerd-inline-block bottom rounded-3"
                          style="border: 1px solid darkgrey;">
                         <div class="row align-items-center">
                             <div class="col">
