--- a/html5/index.html
+++ b/html5/index.html
@@ -44,8 +44,8 @@
 <main>
     <div class="container-xl">
         <div class="row justify-content-evenly">
-            <div class="d-flex col start min-vh-100"
-                 style="background-image:url('./images/final_o23_plakat_734x1080px.jpg');background-repeat:no-repeat;background-size:contain;">
+            <div class="d-flex col start min-vh-100 vh-100"
+                 style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:cover;background-position:center;height:1080px;">
             </div>
             <div class="d-flex col flex-column end min-vh-100 vh-100">
                 <div class="row justify-content-evenly ms-auto h-50 ">
