--- a/html5/index.html
+++ b/html5/index.html
@@ -45,7 +45,7 @@
     <div class="container-xl">
         <div class="row justify-content-evenly">
             <div class="d-flex col start min-vh-100 vh-100"
-                 style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:cover;background-position:center;height:1080px;">
+                 style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:center;height:100%;">
             </div>
             <div class="d-flex col flex-column end min-vh-100 vh-100">
                 <div class="row justify-content-evenly ms-auto h-50 ">
