--- a/html5/index.html
+++ b/html5/index.html
@@ -44,7 +44,7 @@
 <main>
     <div class="container-xl">
         <div class="row justify-content-evenly">
-            <div class="d-flex col start min-vh-100 vh-100"
+            <div class="d-flex col w-25 start min-vh-100 vh-100"
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:center;height:100%;">
             </div>
             <div class="d-flex col flex-column end min-vh-100 vh-100">
@@ -54,14 +54,16 @@
                          style="border: 1px solid darkgrey;">
                         <div class="row">
                             <div class="col">
-                                <h3 class="display-4 ms-auto">Beteilige Dich an der
-                                    <span class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23
+                                </br>
+                                <h2 class="text-bold ms-auto lead">Beteilige Dich an der
+                                    <span class="ostrale" style="color: #dc3545">O</span>23
                                     Umfrage!
-                                </h3>
+                                </h2>
+                                </br>
                             </div>
-                            </br>
+
                             <div class="row align-items-center">
-                                <div class="col align-self-center ms-auto">
+                                <div class="col align-items-start ms-auto">
                                     <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
                                        data-bs-toggle="modal"
                                        data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
@@ -76,13 +78,15 @@
                          style="border: 1px solid darkgrey;">
                         <div class="row align-items-center">
                             <div class="col">
-                                <h3 class="display-4 ms-auto">Take part in the survey about the biennial <span
-                                        class="bs-red text-bold text-danger" style="font-size: 67px;">O</span>23!
-                                </h3>
+                                </br>
+                                <h2 class="text-bold ms-auto lead">Take part in the survey about the biennial <span
+                                        class="ostrale" style="color: #dc3545;">O</span>23!
+                                </h2>
+                                </br>
                             </div>
-                            </br>
+
                             <div class="row align-items-center">
-                                <div class="col align-self-auto ms-auto">
+                                <div class="col align-items-end ms-auto">
                                     <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 ms-auto rounded-bottom"
                                        data-bs-toggle="modal"
                                        data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
