--- a/html5/index.html
+++ b/html5/index.html
@@ -55,16 +55,16 @@
                         <div class="row">
                             <div class="col">
                                 </br>
-                                <h2 class="text-bold ms-auto lead">Beteilige Dich an der
+                                <h3 class="bold ms-auto">Beteilige Dich an der
                                     <span class="ostrale" style="color: #dc3545">O</span>23
                                     Umfrage!
-                                </h2>
+                                </h3>
                                 </br>
                             </div>
 
                             <div class="row align-items-center">
                                 <div class="col align-items-start ms-auto">
-                                    <a class="btn btn-lg btn-danger btn-xxl text-white rounded-3 ms-auto rounded-bottom shadow"
+                                    <a class="btn btn-lg btn-danger btn-xxl text-white display-5 rounded-3 ms-auto rounded-bottom shadow"
                                        data-bs-toggle="modal"
                                        data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
                                        onClick="call_startSurvey('de');">Starte Umfrage</a>
@@ -73,21 +73,21 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-evenly ms-auto h-50 ">
+                <div class="row justify-content-evenly ms-auto h-50">
                     <div class="d-flex col align-self-centerd-inline-block bottom rounded-3"
                          style="border: 1px solid darkgrey;">
                         <div class="row align-items-center">
                             <div class="col">
                                 </br>
-                                <h2 class="text-bold ms-auto lead">Take part in the survey about the biennial <span
+                                <h3 class="bold ms-auto">Take part in the survey about the biennial <span
                                         class="ostrale" style="color: #dc3545;">O</span>23!
-                                </h2>
+                                </h3>
                                 </br>
                             </div>
 
                             <div class="row align-items-center">
                                 <div class="col align-items-end ms-auto">
-                                    <a class="btn btn-danger btn-lg btn-xxl shadow text-white rounded-3 ms-auto rounded-bottom"
+                                    <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
                                        data-bs-toggle="modal"
                                        data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
                                        onClick="call_startSurvey('en');">Start the survey</a>
