--- a/html5/index.html
+++ b/html5/index.html
@@ -44,10 +44,10 @@
 <main>
     <div class="container-xxl">
         <div class="row justify-content-evenly">
-            <div class="d-flex col w-25 start min-vh-100 vh-100"
-                 style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top right;height:100%;">
+            <div class="d-flex col w-25 align-self-start min-vh-100 vh-100"
+                 style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
-            <div class="d-flex col w-75 flex-column end min-vh-100 vh-100">
+            <div class="d-flex col flex-column align-self-end min-vh-100 vh-100">
                 <div class="row justify-content-evenly ms-auto h-50 ">
 
                     <div class="col d-flex d-inline-block top rounded-3"
