--- a/html5/index.html
+++ b/html5/index.html
@@ -42,7 +42,7 @@
 <header class="d-none">
 </header>
 <main>
-    <div class="container-xxl">
+    <div class="container-fluid">
         <div class="row justify-content-evenly">
             <div class="d-flex col w-25 align-self-start min-vh-100 vh-100"
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
