--- a/html5/index.html
+++ b/html5/index.html
@@ -48,7 +48,7 @@
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
             <div class="d-flex col flex-column w-75 align-self-end min-vh-100 vh-100">
-                <div class="row justify-content-evenly ms-auto h-50 ">
+                <div class="row justify-content-evenly ms-auto h-50 " style="padding: 2em;">
 
                     <div class="col d-flex d-inline-block top rounded-3"
                          style="border: 1px solid darkgrey;">
