--- a/html5/index.html
+++ b/html5/index.html
@@ -47,7 +47,7 @@
             <div class="d-flex col flex-column offset-1 w-25 align-self-start min-vh-100 vh-100"
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
-            <div class="d-flex col flex-column w-75 align-self-end min-vh-100 vh-100">
+            <div class="d-flex col flex-column w-75 align-self-start min-vh-100 vh-100">
                 <div class="row justify-content-evenly ms-auto h-50 " style="padding: 2em;">
 
                     <div class="col d-flex d-inline-block top rounded-3"
@@ -73,8 +73,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-evenly ms-auto h-50">
-                    <div class="d-flex col align-self-centerd-inline-block bottom rounded-3"
+                <div class="row justify-content-evenly ms-auto h-50" style="padding: 2em;">
+                    <div class="d-flex col align-self-end inline-block bottom rounded-3"
                          style="border: 1px solid darkgrey;">
                         <div class="row align-items-center">
                             <div class="col">
