changed: html5/index.html

--- a/html5/index.html
+++ b/html5/index.html
@@ -42,28 +42,25 @@
 <header class="d-none">
 </header>
 <main>
-    <div class="container-fluid">
+    <div class="container-xxl">
         <div class="row justify-content-evenly">
-            <div class="d-flex col flex-column offset-1 w-25 align-self-start min-vh-100 vh-100"
+            <div class="rahmen d-flex col-2 flex-column offset-1 start min-vh-100 vh-100"
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
-            <div class="d-flex col flex-column w-75 align-self-start min-vh-100 vh-100">
-                <div class="row justify-content-evenly ms-auto h-50 " style="padding: 2em;">
-
-                    <div class="col d-flex d-inline-block top rounded-3"
-                         style="border: 1px solid darkgrey;">
+            <div class="rahmen d-flex col-auto flex-column end min-vh-100 vh-100" style="padding-top: 2em;padding-bottom: 2em;">
+                <div class="row justify-content-evenly ms-auto h-50">
+                    <div class="rahmen d-flex col d-inline-block top rounded-3" style="padding: 2em;border: 1px solid darkgrey;">
                         <div class="row">
                             <div class="col">
                                 </br>
                                 <h3 class="bold ms-auto">Beteilige Dich an der
-                                    <span class="ostrale" style="color: #dc3545">O</span>23
+                                    <span class="ostrale" style="">O</span>23
                                     Umfrage!
                                 </h3>
                                 </br>
                             </div>
-
                             <div class="row align-items-center">
-                                <div class="col align-items-start ms-auto">
+                                <div class="d-flex col align-items-start ms-auto">
                                     <a class="btn btn-lg btn-danger btn-xxl text-white display-5 rounded-3 ms-auto rounded-bottom shadow"
                                        data-bs-toggle="modal"
                                        data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
@@ -73,20 +70,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-evenly ms-auto h-50" style="padding: 2em;">
-                    <div class="d-flex col align-self-end inline-block bottom rounded-3"
-                         style="border: 1px solid darkgrey;">
-                        <div class="row align-items-center">
+                <div class="row justify-content-evenly ms-auto h-50" style="padding-top: 2em;padding-bottom: 2em;">
+                    <div class="rahmen d-flex col end d-inline-block bottom rounded-3"
+                         style="border: 1px solid darkgrey;padding: 2em;">
+                        <div class="row">
                             <div class="col">
                                 </br>
                                 <h3 class="bold ms-auto">Take part in the survey about the biennial <span
-                                        class="ostrale" style="color: #dc3545;">O</span>23!
+                                        class="ostrale" style="">O</span>23!
                                 </h3>
                                 </br>
                             </div>
-
                             <div class="row align-items-center">
-                                <div class="col align-items-end ms-auto">
+                                <div class="d-flex col align-self-end ms-auto">
                                     <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
                                        data-bs-toggle="modal"
                                        data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
@@ -95,7 +91,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
