--- a/html5/index.html
+++ b/html5/index.html
@@ -43,11 +43,11 @@
 </header>
 <main>
     <div class="container-xl">
-        <div class="row justify-content-evenly">
-            <div class="rahmen d-flex col-2 flex-column offset-1 start min-vh-100 vh-100"
+        <div class="row justify-content-evenly min-vh-100">
+            <div class="rahmen d-flex col offset-1 start vh-100"
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
-            <div class="rahmen d-flex col-auto end min-vh-100 vh-100" style="padding-top: 2em;padding-bottom: 2em;">
+            <div class="rahmen d-flex col end vh-100" style="padding-top: 2em;padding-bottom: 2em;">
                 <div class="row justify-content-evenly ms-auto h-50">
                     <div class="rahmen d-flex col d-inline-block top rounded-3"
                          style="padding: 2em;border: 1px solid darkgrey;">
