modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -44,13 +44,13 @@
 <main>
     <div class="container-xl">
         <div class="row justify-content-evenly min-vh-100">
-            <div class="rahmen d-flex col offset-1 start vh-100"
+            <div class="d-flex col offset-1 start vh-100"
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
-            <div class="rahmen d-flex col end vh-100" style="padding-top: 2em;padding-bottom: 2em;">
-                <div class="row justify-content-evenly ms-auto h-50">
-                    <div class="rahmen d-flex col d-inline-block top rounded-3"
-                         style="padding: 2em;border: 1px solid darkgrey;">
+            <div class="d-flex col end vh-100">
+                <div class="rahmen row ms-auto h-50" style="padding-bottom: 1em;padding-top: 1em;">
+                    <div class="rahmen col d-inline-block top rounded-3"
+                         style="padding: 1em;border: 1px solid red;">
                         <div class="row">
                             <div class="col">
                                 </br>
@@ -71,9 +71,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-evenly ms-auto h-50" style="padding-top: 2em;padding-bottom: 2em;">
-                    <div class="rahmen d-flex col end d-inline-block bottom rounded-3"
-                         style="border: 1px solid darkgrey;padding: 2em;">
+                <div class="rahmen row ms-auto h-50" style="padding-bottom: 1em;padding-top: 1em;">
+                    <div class="rahmen col d-inline-block bottom rounded-3"
+                         style="border: 1px solid red;padding: 1em;">
                         <div class="row">
                             <div class="col">
                                 </br>
@@ -83,7 +83,7 @@
                                 </br>
                             </div>
                             <div class="row align-items-center">
-                                <div class="d-flex col align-self-end ms-auto">
+                                <div class="d-flex col align-items-end ms-auto">
                                     <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
                                        data-bs-toggle="modal"
                                        data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
