modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -48,46 +48,47 @@
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
             <div class="d-flex col end vh-100">
-                <div class="rahmen row ms-auto h-50" style="padding-bottom: 1em;padding-top: 1em;">
-                    <div class="rahmen col d-inline-block top rounded-3"
-                         style="padding: 1em;border: 1px solid red;">
-                        <div class="row">
-                            <div class="col">
-                                </br>
-                                <h3 class="bold ms-auto">Beteilige Dich an der
-                                    <span class="ostrale" style="">O</span>23
-                                    Umfrage!
-                                </h3>
-                                </br>
-                            </div>
-                            <div class="row align-items-center">
-                                <div class="d-flex col align-items-start ms-auto">
-                                    <a class="btn btn-lg btn-danger btn-xxl text-white display-5 rounded-3 ms-auto rounded-bottom shadow"
-                                       data-bs-toggle="modal"
-                                       data-bs-target="#my-modal" data-language="de" role="button" id="BtnDE"
-                                       onClick="call_startSurvey('de');">Starte Umfrage</a>
+                <div class="rahmen col end vh-100 w-100" style="padding-top: 2em;padding-bottom: 2em;">
+                    <div class="row w-100">
+                        <div class="rahmen d-flex col-12 inline-block top rounded-3 w-100"
+                             style="padding: 2em;border: 1px solid darkgrey;">
+                            <div class="row">
+                                <div class="col">
+                                    <br>
+                                    <h3 class="bold ms-auto">Beteilige Dich an der
+                                        <span class="ostrale" style="">O</span>23
+                                        Umfrage!
+                                    </h3>
+                                    <br>
+                                </div>
+                                <div class="row align-items-center">
+                                    <div class="d-flex col align-items-start ms-auto">
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-5 rounded-3 ms-auto rounded-bottom shadow"
+                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
+                                           role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="rahmen row ms-auto h-50" style="padding-bottom: 1em;padding-top: 1em;">
-                    <div class="rahmen col d-inline-block bottom rounded-3"
-                         style="border: 1px solid red;padding: 1em;">
-                        <div class="row">
-                            <div class="col">
-                                </br>
-                                <h3 class="bold ms-auto">Take part in the survey about the biennial <span
-                                        class="ostrale" style="">O</span>23!
-                                </h3>
-                                </br>
-                            </div>
-                            <div class="row align-items-center">
-                                <div class="d-flex col align-items-end ms-auto">
-                                    <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
-                                       data-bs-toggle="modal"
-                                       data-bs-target="#my-modal" data-language="en" role="button" id="BtnEN"
-                                       onClick="call_startSurvey('en');">Start the survey</a>
+                    <div class="row justify-content-evenly w-100 h-50" style="padding-top: 2em;padding-bottom: 2em;">
+                        <div class="rahmen d-flex col end d-inline-block bottom rounded-3"
+                             style="border: 1px solid darkgrey;padding: 2em;">
+                            <div class="row">
+                                <div class="col">
+                                    <br>
+                                    <h3 class="bold ms-auto">Take part in the survey about the biennial <span
+                                            class="ostrale" style="">O</span>23!
+                                    </h3>
+                                    <br>
+                                </div>
+                                <div class="row align-items-center">
+                                    <div class="d-flex col align-self-end ms-auto">
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
+                                           data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
+                                           role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
+                                            survey</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
