--- a/html5/index.html
+++ b/html5/index.html
@@ -101,15 +101,15 @@
 <footer class="d-none">© Ostrale 2023 | All Rights Reserved | Version: 2.0.10-stable // @fehlercode42</footer>
 </body>
 <div id="my-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="my-modal-title" aria-hidden="true">
-    <div class="modal-dialog modal-fullscreen modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title d-none" id="my-modal-title">Umfrage / Survey</h5>
                 <button class="carousel-control-prev-icon" disabled aria-label="Zur&uml;ck / Back">
-                    <span aria-hidden="true"><i
-                            class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&times</span>
+                    <span aria-hidden="true"><i class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&times</span>
                 </button>
-                <button class="close" data-dismiss="modal" aria-label="Close">
+                <button class="close" data-bs-toggle="#my-modal" data-bs-dismiss="my-modal" data-bs-backdrop="modal"
+                        aria-label="Close">
                     <span aria-hidden="true">&times</span>
                 </button>
             </div>
