--- a/html5/index.html
+++ b/html5/index.html
@@ -44,7 +44,7 @@
 <main>
     <div class="container-xl">
         <div class="row justify-content-evenly min-vh-100">
-            <div class="d-flex col-4 start vh-100"
+            <div class="d-flex col-4 offset-1 start vh-100"
                  style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg');background-repeat:no-repeat;background-size:contain;background-position:top left;height:100%;">
             </div>
             <div class="d-flex col end vh-100">
