modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -108,7 +108,7 @@
                 <button class="carousel-control-prev-icon" disabled aria-label="Zur&uml;ck / Back">
                     <span aria-hidden="true"><i class="fas fa-creative-commons fa-icons fa-arrow-circle-left"></i>&times</span>
                 </button>
-                <button class="close" data-bs-toggle="modal" data-bs-backdrop="#my-modal"
+                <button class="close" data-bs-toggle="#my-modal" data-bs-backdrop="#my-modal"
                         aria-label="Close">
                     <span aria-hidden="true">&times</span>
                 </button>
