--- a/html5/index.html
+++ b/html5/index.html
@@ -44,7 +44,7 @@
 <main>
     <div class="container-xl">
         <div class="row justify-content-evenly min-vh-100"
-             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 75px;">
+             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 25px;">
             <div class="d-flex col start vh-100">
             </div>
             <div class="d-flex col end vh-100">
