modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -42,14 +42,14 @@
 <header class="d-none">
 </header>
 <main>
-    <div class="container-xl">
+    <div class="container-xxl">
         <div class="row justify-content-evenly min-vh-100"
              style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 25px;">
             <div class="d-flex col start vh-100">
             </div>
             <div class="d-flex col end vh-100">
-                <div class="rahmen col end vh-100 w-100" style="padding-top: 2em;padding-bottom: 2em;">
-                    <div class="row w-100">
+                <div class="rahmen col vh-100 " style="padding-top: 2em;padding-bottom: 2em;">
+                    <div class="row">
                         <div class="rahmen d-flex col-12 inline-block top rounded-3 w-100"
                              style="padding: 2em;border: 1px solid darkgrey;">
                             <div class="row">
