--- a/html5/index.html
+++ b/html5/index.html
@@ -43,14 +43,13 @@
 </header>
 <main>
     <div class="container-xxl">
-        <div class="row justify-content-evenly min-vh-100"
+        <div class="row min-vh-100"
              style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 25px;">
-            <div class="d-flex col start vh-100">
-            </div>
-            <div class="d-flex col end vh-100">
-                <div class="rahmen col vh-100 " style="padding-top: 2em;padding-bottom: 2em;">
-                    <div class="row">
-                        <div class="rahmen d-flex col-12 inline-block top rounded-3 w-100"
+            <div class="d-flex col start min-vh-100"></div>
+            <div class="d-flex col end min-vh-100">
+                <div class="rahmen h-50 w-100" style="padding-top: 2em;padding-bottom: 2em;">
+                    <div class="row justify-content-evenly w-100">
+                        <div class="rahmen d-flex col inline-block top rounded-3"
                              style="padding: 2em;border: 1px solid darkgrey;">
                             <div class="row">
                                 <div class="col">
@@ -71,7 +70,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row justify-content-evenly w-100 h-50" style="padding-top: 2em;padding-bottom: 2em;">
+                    <div class="row justify-content-evenly w-100" style="padding-top: 2em;padding-bottom: 2em;">
                         <div class="rahmen d-flex col end d-inline-block bottom rounded-3"
                              style="border: 1px solid darkgrey;padding: 2em;">
                             <div class="row">
