modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -44,7 +44,7 @@
 <main>
     <div class="container-fluid">
         <div class="row min-vh-100"
-             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 25px;">
+             style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 1em;">
             <div class="d-flex col start min-vh-100"></div>
             <div class="d-flex col end min-vh-100">
                 <div class="rahmen h-50 w-100" style="padding-top: 2em;padding-bottom: 2em;">
