--- a/html5/index.html
+++ b/html5/index.html
@@ -46,7 +46,7 @@
         <div class="row min-vh-100"
              style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 4rem;">
             <div class="d-flex col start min-vh-100"></div>
-            <div class="d-flex col end min-vh-100">
+            <div class="d-flex col end min-vh-100" style="padding-right:5rem;">
                 <div class="rahmen w-100">
                     <div class="row justify-content-evenly w-100 h-50 top"
                          style="padding-top: 2em;padding-bottom: 2em;">
