modified: html5/index.html html5/css/styles.css html5/js/scripts.js

--- a/html5/index.html
+++ b/html5/index.html
@@ -46,23 +46,25 @@
         <div class="row min-vh-100"
              style="background-image:url('./images/final_023_plakat_portrait_509x1080.jpg'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position-y:0;background-position-x: 4rem;">
             <div class="d-flex col start min-vh-100"></div>
-            <div class="d-flex col end min-vh-100" style="padding-right:5rem;">
-                <div class="rahmen w-100">
+            <div class="d-flex col end min-vh-100"
+                 style="padding-right:5rem; background-image:url('./images/robotron-kantine_893x664px_96dpi.png'); background-origin: border-box;background-repeat:no-repeat;background-size:contain;background-position:center;">
+                <div class="rahmen w-100" style="opacity: 0.7;">
                     <div class="row justify-content-evenly w-100 h-50 top"
                          style="padding-top: 2em;padding-bottom: 2em;">
-                        <div class="rahmen col inline-block rounded-3" style="padding: 2em;border: 1px solid darkred;">
+                        <div class="rahmen col inline-block rounded-3 shadow-3"
+                             style="padding: 2em;border: 2px solid darkred;">
                             <div class="row">
                                 <div class="col">
                                     <br>
-                                    <h3 class="bold ms-auto">Beteilige Dich an der
+                                    <h2 class="bold ms-auto">Beteilige Dich an der
                                         <span class="ostrale" style="">O</span>23
                                         Umfrage!
-                                    </h3>
+                                    </h2>
                                     <br>
                                 </div>
-                                <div class="row align-items-center">
-                                    <div class="d-flex col align-items-start ms-auto">
-                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-6 rounded-3 ms-auto rounded-bottom shadow"
+                                <div class="row align-items-start align-bottom">
+                                    <div class="d-flex col align-items-start me-auto">
+                                        <a class="btn btn-lg btn-danger btn-xxl text-white display-5 rounded-3 me-auto rounded-bottom shadow"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="de"
                                            role="button" id="BtnDE" onclick="call_startSurvey('de');">Starte Umfrage</a>
                                     </div>
@@ -72,18 +74,19 @@
                     </div>
                     <div class="row justify-content-evenly w-100 h-50 bottom"
                          style="padding-top: 2em;padding-bottom: 2em;">
-                        <div class="rahmen col end inline-block rounded-3" style="border: 1px solid red;padding: 2em;">
+                        <div class="rahmen col end inline-block rounded-3 shadow-lg "
+                             style="border: 2px solid darkred;padding: 2em;">
                             <div class="row">
                                 <div class="col">
                                     <br>
-                                    <h3 class="bold ms-auto">Take part in the survey about the biennial <span
+                                    <h2 class="bold ms-auto">Take part in the survey about the biennial <span
                                             class="ostrale" style="">O</span>23!
-                                    </h3>
+                                    </h2>
                                     <br>
                                 </div>
-                                <div class="row align-items-center">
-                                    <div class="d-flex col align-self-end ms-auto">
-                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-6 rounded-3 ms-auto rounded-bottom"
+                                <div class="row align-items-end align-bottom">
+                                    <div class="d-flex col align-items-end me-auto">
+                                        <a class="btn btn-danger btn-lg btn-xxl shadow text-white display-5 rounded-3 ms-auto rounded-bottom"
                                            data-bs-toggle="modal" data-bs-target="#my-modal" data-language="en"
                                            role="button" id="BtnEN" onclick="call_startSurvey('en');">Start the
                                             survey</a>
